# fast-api-boiler

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/dependencies/: content_type.py
app/api/routers/: __init__.py
app/api/routers/accounts/: __init__.py
app/api/routers/items/: __init__.py
app/api/routers/users/: __init__.py
app/commands/: __init__.py  users.py
app/core/config/: __init__.py  database.py
app/db/: __init__.py  base_model.py  serializers.py
app/db/events/: __init__.py
app/db/migrations/: env.py
app/db/migrations/versions/: 10426d5af2de_initial_migration.py
app/db/models/: account.py  entry.py  journal.py  stats.py  user.py
app/db/models/mixins/: __init__.py
app/db/models/mixins/common/: __init__.py  soft_delete.py
app/db/quireies/: base.py
app/middlewares/: client_auth.py  route_middlwares.py
app/resources/messages/: __init__.py
app/routers/items/: __init__.py
app/routers/users/: __init__.py
app/services/: common.py  date_range.py  serializers.py
