[tool.poetry]
name = "sheba-accounting"
version = "0.1.0"
description = "Sheba sManagager Accounting project"
authors = ["tonmoy <tonmoy007@sheba.xyz>"]
license = "Sheba Platform limited"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
fastapi-utils = "^0.2.1"
uvicorn = "^0.13.4"
pydantic = "^1.7.3"
passlib = "^1.7.4"
PyJWT = "^2.0.1"
databases = "^0.4.1"
alembic = "^1.5.5"
Unidecode = "^1.2.0"
loguru = "^0.5.3"
sentry-sdk = "^0.20.3"
SQLAlchemy-Utils = "^0.36.8"
SQLAlchemy = "^1.3.23"
mysqlclient = "^2.0.3"
PyMySQL = "^1.0.2"
typer = "^0.3.2"
FastAPI-SQLAlchemy = "^0.2.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
commands="app.commands:commands"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
